--- a/contact.html
+++ b/contact.html
@@ -89,7 +89,7 @@ button {
         <button type="submit">Send your message</button>
      </div>
        <div class = "field">
-        <div data-netlif-recaptcha = "true">
+        <div data-netlify-recaptcha = "true">
             
         </div>
         </div>
