--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@ button {
       </style>
       
 </head>
-<form method="post" data-netlify = "true">
+<form name = "contact" method="POST" data-netlify = "true">
     <ul>
       <li>
         <label for = "name">Name:</label>
