--- a/contact.html
+++ b/contact.html
@@ -73,31 +73,26 @@ button {
 <body>
   
 
-  <form name = "contact" method="POST" data-netlify = "true">
-        <ul>
-          <li>
-            <label for = "name">Name:</label>
-            <input type="text" id="name" name="user_name" />
-          </li>
-          <li>
-            <label for="mail">Email:</label>
-            <input type="email" id="mail" name="user_email" />
-          </li>
-          <li>
-            <label for="msg">Message:</label>
-            <textarea id="msg" name="user_message"></textarea>
-          </li>
-        </ul>
-        <div class = button>
-            <button type="submit">Send your message</button>
-        </div>
-          <div class = "field">
-            <div data-netlify-recaptcha = "true">
-                
-            </div>
-          </div>
-        </div>
-          
+  <form name="contact" method="POST" data-netlify="true">
+    <p>
+      <label>Your Name: <input type="text" name="name" /></label>
+    </p>
+    <p>
+      <label>Your Email: <input type="email" name="email" /></label>
+    </p>
+    <p>
+      <label>Your Role: <select name="role[]" multiple>
+        <option value="leader">Leader</option>
+        <option value="follower">Follower</option>
+      </select></label>
+    </p>
+    <p>
+      <label>Message: <textarea name="message"></textarea></label>
+    </p>
+    <p>
+      <button type="submit">Send</button>
+    </p>
   </form>
+  
 </body>
   
