--- a/contact.html
+++ b/contact.html
@@ -85,6 +85,7 @@ button {
       <label>Message: <textarea name="message"></textarea></label>
     </p>
     <p>
+      <div data-netlify-recaptcha = "true"></div>
       <button type="submit">Send</button>
     </p>
   </form>
